syntax = "proto3";

package apibara.starknet.v1alpha2;

// StarkNet field element.
//
// Encoded as 4 packed uint64
message FieldElement {
  fixed64 lo_lo = 1 [jstype = JS_STRING];
  fixed64 lo_hi = 2 [jstype = JS_STRING];
  fixed64 hi_lo = 3 [jstype = JS_STRING];
  fixed64 hi_hi = 4 [jstype = JS_STRING];
}
